add metadata as a query parameter into /dataobjects endpoint
